--- a/src/app/Components/vistas/login/login.component.html
+++ b/src/app/Components/vistas/login/login.component.html
@@ -18,17 +18,18 @@
         <img
           loading="lazy"
           class="w-56"
-          src="/assets/images/sAFE_trabel-removebg-preview.png"
+          src="/sr/assets/images/sAFE_trabel-removebg-preview.png"
           alt="logo"
         />
       </header>
       <div class="bg-white rounded shadow-none sm:shadow-lg py-4 px-6 md:px-10">
         <div class="mb-4">
           <h1 class="text-center font-bold pt-4 pb-8 text-gray-600">Log in to Trello</h1>
-          <form novalidate class="space-y-4">
+          <form novalidate class="space-y-4" [formGroup]="FormLogin">
             <div>
               <div class="relative">
                 <input
+                formControlName="email"
                   placeholder="Enter email"
                   type="email"
                   class="w-full rounded bg-gray-100 border-gray-300 border-2"
@@ -38,6 +39,7 @@
             <div>
               <div class="relative">
                 <input
+                  formControlName="password"
                   placeholder="Enter password"
                   type="password"
                   class="w-full rounded bg-gray-100 border-gray-300 border-2"
