--- a/src/app/Components/vistas/login/login.component.html
+++ b/src/app/Components/vistas/login/login.component.html
@@ -18,13 +18,13 @@
         <img
           loading="lazy"
           class="w-56"
-          src="/sr/assets/images/sAFE_trabel-removebg-preview.png"
+          src="/assets/images/sAFE_trabel-removebg-preview.png"
           alt="logo"
         />
       </header>
       <div class="bg-white rounded shadow-none sm:shadow-lg py-4 px-6 md:px-10">
         <div class="mb-4">
-          <h1 class="text-center font-bold pt-4 pb-8 text-gray-600">Log in to Trello</h1>
+          <h1 class="text-center font-bold pt-4 pb-8 text-gray-600">Log in to Safe Trabel</h1>
           <form novalidate class="space-y-4" [formGroup]="FormLogin">
             <div>
               <div class="relative">
