--- a/src/app/Components/navbarprincipal/navbarprincipal.component.html
+++ b/src/app/Components/navbarprincipal/navbarprincipal.component.html
@@ -1,6 +1,6 @@
 <div class="lg:flex lg:items-center lg:justify-between container mx-auto pt-3 pb-16">
     <div class="min-w-0 flex-1">
-      <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">Back End Developer</h2>
+      <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:truncate sm:text-3xl sm:tracking-tight">Safe Trabel</h2>
       <div class="mt-1 flex flex-col sm:mt-0 sm:flex-row sm:flex-wrap sm:space-x-6">
         <div class="mt-2 flex items-center text-sm text-gray-500">
           <svg class="mr-1.5 h-5 w-5 flex-shrink-0 text-gray-400" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
