--- a/src/app/Components/vistas/home/home.component.html
+++ b/src/app/Components/vistas/home/home.component.html
@@ -2,85 +2,86 @@
 <section>
     <div class="bg-white">
         <div class="mx-auto max-w-7xl px-6">
+          <h2>Formas de Recorrer Cartagena</h2>
           <div class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16  pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
             <article class="flex max-w-xl flex-col items-start p-9 justify-between border border-gray-200">
               <div class="flex items-center gap-x-4 text-xs">
                 <time datetime="2020-03-16" class="text-gray-500">Mar 16, 2020</time>
-                <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Marketing</a>
+                <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Playas</a>
               </div>
               <div class="group relative">
                 <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
                   <a href="#">
                     <span class="absolute inset-0"></span>
-                    Boost your conversion rate
+                    Islas Rosario 
                   </a>
                 </h3>
-                <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel. Iusto corrupti dicta.</p>
+                <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">Escape de las bulliciosas calles de Cartagena con un día completo en las islas Rosario.</p>
               </div>
               <div class="relative mt-8 flex items-center gap-x-4">
-                <img src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="h-10 w-10 rounded-full bg-gray-50">
+                <img src="https://media-cdn.tripadvisor.com/media/attractions-splice-spp-720x480/11/dc/76/0c.jpg" alt="" class="h-48 w-48 rounded-full bg-gray-50">
                 <div class="text-sm leading-6">
                   <p class="font-semibold text-gray-900">
                     <a href="#">
                       <span class="absolute inset-0"></span>
-                      Michael Foster
+                      Calificacion :
                     </a>
                   </p>
-                  <p class="text-gray-600">Co-Founder / CTO</p>
+                  <p class="text-gray-600">Aqui Numero de Opiniones</p>
                 </div>
               </div>
             </article>
             <article class="flex max-w-xl flex-col items-start p-9  justify-between border border-gray-200">
                 <div class="flex items-center gap-x-4 text-xs">
                   <time datetime="2020-03-16" class="text-gray-500">Mar 16, 2020</time>
-                  <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Marketing</a>
+                  <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Sitio Turistico</a>
                 </div>
                 <div class="group relative">
                   <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
                     <a href="#">
                       <span class="absolute inset-0"></span>
-                      Boost your conversion rate
+                      Histórico de Palenque
                     </a>
                   </h3>
-                  <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel. Iusto corrupti dicta.</p>
+                  <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">Descubra la fascinante y a menudo pasada por alto historia de Palenque</p>
                 </div>
                 <div class="relative mt-8 flex items-center gap-x-4">
-                  <img src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="h-10 w-10 rounded-full bg-gray-50">
+                  <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/2b/ae/b0/e1/caption.jpg?w=1200&h=-1&s=1" alt="" class="h-48 w-48 rounded-full bg-gray-50">
                   <div class="text-sm leading-6">
                     <p class="font-semibold text-gray-900">
                       <a href="#">
                         <span class="absolute inset-0"></span>
-                        Michael Foster
+                       Calificaciones
                       </a>
                     </p>
-                    <p class="text-gray-600">Co-Founder / CTO</p>
+                    <p class="text-gray-600">Cantidad de comentarios</p>
                   </div>
                 </div>
               </article>
               <article class="flex max-w-xl flex-col items-start p-9  justify-between border border-gray-200">
                 <div class="flex items-center gap-x-4 text-xs">
                   <time datetime="2020-03-16" class="text-gray-500">Mar 16, 2020</time>
-                  <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Marketing</a>
+                  <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Sitio Turistico </a>
                 </div>
                 <div class="group relative">
                   <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
                     <a href="#">
                       <span class="absolute inset-0"></span>
-                      Boost your conversion rate
+                      Ciudad amurallada y Getsemaní
                     </a>
                   </h3>
                   <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel. Iusto corrupti dicta.</p>
                 </div>
                 <div class="relative mt-8 flex items-center gap-x-4">
-                  <img src="https://images.unsplash.com/photo-1519244703995-f4e0f30006d5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="" class="h-10 w-10 rounded-full bg-gray-50">
+                  <img src="https://media-cdn.tripadvisor.com/media/attractions-splice-spp-720x480/10/49/3d/31.jpg" alt="" class="h-48 w-48 rounded-full bg-gray-50">
                   <div class="text-sm leading-6">
                     <p class="font-semibold text-gray-900">
                       <a href="#">
                         <span class="absolute inset-0"></span>
-                        Michael Foster
+                        Calificacion:
                       </a>
                     </p>
-                    <p class="text-gray-600">Co-Founder / CTO</p>
+                    <p class="text-gray-600">Cantidad de comentarios</p>
                   </div>
                 </div>
               </article>
@@ -90,6 +91,99 @@
         </div>
       </div>
       
+</section>
+<section>
+  <div class="bg-white">
+      <div class="mx-auto max-w-7xl px-6">
+        <h2>Las atracciones más populares en Cartagena</h2>
+        <div class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16  pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+          <article class="flex max-w-xl flex-col items-start p-9 justify-between border border-gray-200">
+            <div class="flex items-center gap-x-4 text-xs">
+              <time datetime="2020-03-16" class="text-gray-500">Mar 16, 2020</time>
+              <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Sitio Turistico</a>
+            </div>
+            <div class="group relative">
+              <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+                <a href="#">
+                  <span class="absolute inset-0"></span>
+                  Islas Rosario 
+                </a>
+              </h3>
+              <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">Fortaleza de la época colonial española construida sobre el Cerro de San Lázaro para proteger la única entrada por tierra a Cartagena de Indias.</p>
+            </div>
+            <div class="relative mt-8 flex items-center gap-x-4">
+              <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0d/f0/a9/c1/img-20161219-152748-largejpg.jpg?w=1200&h=-1&s=1" alt="" class="h-48 w-48 rounded-full bg-gray-50">
+              <div class="text-sm leading-6">
+                <p class="font-semibold text-gray-900">
+                  <a href="#">
+                    <span class="absolute inset-0"></span>
+                    Calificacion :
+                  </a>
+                </p>
+                <p class="text-gray-600">Aqui Numero de Opiniones</p>
+              </div>
+            </div>
+          </article>
+          <article class="flex max-w-xl flex-col items-start p-9  justify-between border border-gray-200">
+              <div class="flex items-center gap-x-4 text-xs">
+                <time datetime="2020-03-16" class="text-gray-500">Mar 16, 2020</time>
+                <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Sitio Turistico</a>
+              </div>
+              <div class="group relative">
+                <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+                  <a href="#">
+                    <span class="absolute inset-0"></span>
+                    Plaza de Bolívar
+                  </a>
+                </h3>
+                <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600"> descripcion</p>
+              </div>
+              <div class="relative mt-8 flex items-center gap-x-4">
+                <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/07/9d/17/72/plaza-bolivar.jpg?w=1200&h=-1&s=1" alt="" class="h-48 w-48 rounded-full bg-gray-50">
+                <div class="text-sm leading-6">
+                  <p class="font-semibold text-gray-900">
+                    <a href="#">
+                      <span class="absolute inset-0"></span>
+                     Calificaciones
+                    </a>
+                  </p>
+                  <p class="text-gray-600">Cantidad de comentarios</p>
+                </div>
+              </div>
+            </article>
+            <article class="flex max-w-xl flex-col items-start p-9  justify-between border border-gray-200">
+              <div class="flex items-center gap-x-4 text-xs">
+                <time datetime="2020-03-16" class="text-gray-500">Mar 16, 2020</time>
+                <a href="#" class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">Sitio Turistico </a>
+              </div>
+              <div class="group relative">
+                <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+                  <a href="#">
+                    <span class="absolute inset-0"></span>
+                    Plaza de San Diego
+                  </a>
+                </h3>
+                <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">descripcion</p>
+              </div>
+              <div class="relative mt-8 flex items-center gap-x-4">
+                <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/12/1c/39/2e/2-plaza-de-san-diego.jpg?w=1200&h=-1&s=1" alt="" class="h-48 w-48 rounded-full bg-gray-50">
+                <div class="text-sm leading-6">
+                  <p class="font-semibold text-gray-900">
+                    <a href="#">
+                      <span class="absolute inset-0"></span>
+                      Calificacion:
+                    </a>
+                  </p>
+                  <p class="text-gray-600">Cantidad de comentarios</p>
+                </div>
+              </div>
+            </article>
+    
+          <!-- More posts... -->
+        </div>
+      </div>
+    </div>
+    
 </section>
 
   
